# datathon-7mlet-grupo-87

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PLANEJAMENTO.md  README.md  pyproject.toml
data/golden_set/: README.md  evaluation_cases.jsonl
data/kaggle/: README.md
data/processed/: bank_marketing.parquet  metadata.json
data/synthetic_enrichment/: README.md  delayed_rewards.parquet  offer_catalog.parquet  offer_events.parquet
docs/: architecture-azure.md  demo-plan.md  etapa-5-plan.md  lgpd-plan.md  mlops-lifecycle.md  model-card.md  system-card.md
docs/pitch/: demo-recording.md  roteiro.md  slides.md
mlops/: policy_registry.json
notebooks/: 01_eda.ipynb  02_enriquecimento_sintetico.ipynb  03_baseline_bandit.ipynb  04_avaliacao_offline.ipynb
reports/: bandit-comparison.md  bandit-metrics.json  data-dictionary.md  data-generation.md  data-quality.md  offline-evaluation.md  offline-metrics.json  technical-report.md
scripts/: run_pipeline.py
src/: __init__.py
src/bandits/: __init__.py  environment.py  experiment.py  policies.py  simulation.py
src/data/: __init__.py  build_processed.py  download.py  load.py  metadata.py  prepare.py  quality.py
src/evaluation/: __init__.py  __main__.py  context_policy.py  evaluator.py  fairness.py  golden_set.py  report.py  schema.py  sensitivity.py
src/mlops/: __init__.py  __main__.py  monitoring.py  promotion.py  registry.py  tracking.py
src/service/: __init__.py  app.py  (+6 more)
tests/: test_bandits.py  test_data_layer.py  test_evaluation.py  test_governance_docs.py  test_mlops.py  test_service.py
(+6 files in other folders)
