[project]
name = "datathon-7mlet-grupo-87"
version = "0.1.0"
description = "Plataforma de experimentacao adaptativa (multi-armed bandit) para ofertas em canais digitais - Datathon 7MLET"
authors = [
    {name = "Higor Menezes", email = "menezes.higor.98@gmail.com"},
    {name = "Narcelio Sousa", email = "narcelioclemente@outlook.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=15.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "scikit-learn>=1.4,<2.0",
    "pydantic>=2.6,<3.0",
    "requests>=2.31",
    "kagglehub>=0.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.poetry]
# Aplicacao (nao biblioteca publicavel): usamos Poetry so para gerenciar dependencias.
# Os modulos sao executados via `poetry run python -m src.data.<modulo>`.
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0"
notebook = ">=7.0"
nbconvert = ">=7.0"
ipykernel = ">=6.29"
pytest = ">=8.0"
ruff = ">=0.4"
httpx = ">=0.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
